remove icons from collapsable-header, fix init.js and correct images url

--- a/assets/css/styleAR.css
+++ b/assets/css/styleAR.css
@@ -123,7 +123,9 @@ footer.page-footer {
 .page2PopOut {
   font-family: 'Droid Arabic Kufi', serif;
   color: #2196f3;
-  float: right;
+  /*float: right;*/
+  padding-top: 10px;
+  text-align: center;
   margin-top: 10px;
 }
 
